Fixed misalignment of <p> in cards in 'Parteneri oficiali' section on main page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -343,7 +343,6 @@
     justify-content: space-between;
     gap: 2em;
 
-
     width: 500px;
 }
 
@@ -387,6 +386,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
+}
+
+.parteneri-oficiali .right-side p {
+    flex: 1;
+    display: flex;
+    align-items: center;
 }
 
 @media screen and (max-width: 650px) {
